added second line of story

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <body>
       <p>It was a dark and stormy night...</p>
+      <p>when Adam and his brother decided to go for a hike in the forest.</p>
     </body>
   </html>
