fourth line added to story

--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
       <p>It was a dark and stormy night...</p>
       <p>when Adam and his brother decided to go for a hike in the forest.</p>
       <p>Adam's brother, Blake, could not stop talking about his ex and his <b><em>baby momma drama<b></em></p>
+      <p>Little did Blake know that Adam was part of that baby momma drama.</p>
     </body>
   </html>
