the plot thickens

--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
       <p>when Adam and his brother decided to go for a hike in the forest.</p>
       <p>Adam's brother, Blake, could not stop talking about his ex and his <b><em>baby momma drama<b></em></p>
       <p>Little did Blake know that Adam was part of that baby momma drama.</p>
+      <p>Adam was worried, if Blake new would he make it out of the forest? He wanted to tell his brother, but</p>
     </body>
   </html>
