--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+    <head>
+      <link rel="stylesheet" type="text/css" href="style.css">
+    </head>
     <body>
       <p>It was a dark and stormy night...</p>
       <p>when Adam and his brother decided to go for a hike in the forest.</p>
